[gd_scene load_steps=7 format=3 uid="uid://b317myro4801p"]

[ext_resource type="Script" path="res://menus/splash.gd" id="1_y7lqa"]
[ext_resource type="Texture2D" uid="uid://1u77eklto0bv" path="res://textures/Screenshot_20230501_012732.png" id="2_dd2tl"]
[ext_resource type="FontFile" uid="uid://ebsuo67scq1m" path="res://fonts/College Boy.otf" id="3_0x4po"]
[ext_resource type="FontFile" uid="uid://3uxvxc2jvvnc" path="res://fonts/vanilla whale.otf" id="3_vh3a4"]

[sub_resource type="LabelSettings" id="LabelSettings_1wiyu"]
font = ExtResource("3_0x4po")
font_size = 30

[sub_resource type="LabelSettings" id="LabelSettings_cmv2w"]
font = ExtResource("3_vh3a4")
font_size = 105

[node name="splash" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 1
script = ExtResource("1_y7lqa")

[node name="screen" type="Control" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="screen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_dd2tl")

[node name="Label" type="Label" parent="screen"]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -73.5
offset_top = 183.5
offset_right = 73.5
offset_bottom = 218.5
grow_horizontal = 2
grow_vertical = 2
text = "Click To Play"
label_settings = SubResource("LabelSettings_1wiyu")

[node name="MarginContainer" type="MarginContainer" parent="screen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="screen" type="VBoxContainer" parent="screen/MarginContainer"]
layout_mode = 2

[node name="menu" type="HBoxContainer" parent="screen/MarginContainer/screen"]
layout_mode = 2
size_flags_vertical = 3

[node name="left" type="VBoxContainer" parent="screen/MarginContainer/screen/menu"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Label" type="Label" parent="screen/MarginContainer/screen/menu/left"]
layout_mode = 2
text = "Vultures at Dawn"
label_settings = SubResource("LabelSettings_cmv2w")
horizontal_alignment = 1
vertical_alignment = 1

[node name="server" type="HBoxContainer" parent="screen/MarginContainer/screen"]
modulate = Color(1, 1, 1, 0.470588)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="screen/MarginContainer/screen/server"]
layout_mode = 2
text = "Server Address: "
vertical_alignment = 2

[node name="server_address" type="LineEdit" parent="screen/MarginContainer/screen/server"]
unique_name_in_owner = true
custom_minimum_size = Vector2(150, 25)
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
placeholder_text = "Server Address"

[node name="spacer" type="Label" parent="screen/MarginContainer/screen/server"]
layout_mode = 2
size_flags_horizontal = 3
text = " "
vertical_alignment = 2

[node name="spacer2" type="Label" parent="screen/MarginContainer/screen/server"]
layout_mode = 2
size_flags_horizontal = 3
text = " "
vertical_alignment = 2

[node name="run_as_server2" type="Button" parent="screen/MarginContainer/screen/server"]
custom_minimum_size = Vector2(150, 25)
layout_mode = 2
size_flags_horizontal = 8
text = "Run as Server"

[node name="credits" type="Button" parent="screen/MarginContainer/screen/server"]
custom_minimum_size = Vector2(150, 25)
layout_mode = 2
size_flags_horizontal = 6
text = "Credits"

[node name="Button" type="Button" parent="screen"]
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -80.0
grow_horizontal = 2
grow_vertical = 2

[node name="connecting" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_dd2tl")

[node name="img" type="ColorRect" parent="connecting"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.717647)

[node name="Label" type="Label" parent="connecting/img"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Connecting to online Services..."

[node name="credits" type="TextureRect" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_dd2tl")

[node name="img" type="ColorRect" parent="credits"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.717647)

[node name="Label" type="Label" parent="credits/img"]
custom_minimum_size = Vector2(350, 350)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Vultures at Dawn was created just by two people in 72hrs for Ludum Dare, a global game jam, in the year 2023.

Shane Scott was responsible for directing the game, programming all logic, and creating the 3D models and layout for the main map.

Nick Tourand created 3D models and 2D textures for the map, created the cowboy hat and created multiple skins and colors for the hats and the players.

Thanks for playing.

Shane @ Site12"
horizontal_alignment = 1
autowrap_mode = 2

[node name="Button" type="Button" parent="credits"]
custom_minimum_size = Vector2(150, 25)
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -75.0
offset_top = -60.0
offset_right = 75.0
offset_bottom = -35.0
grow_horizontal = 2
grow_vertical = 0
theme_override_fonts/font = ExtResource("3_0x4po")
theme_override_font_sizes/font_size = 20
text = "DONE"

[connection signal="text_changed" from="screen/MarginContainer/screen/server/server_address" to="." method="_on_server_address_text_changed"]
[connection signal="button_up" from="screen/MarginContainer/screen/server/run_as_server2" to="." method="_on_run_as_server_button_up" flags=18]
[connection signal="button_up" from="screen/MarginContainer/screen/server/credits" to="." method="_on_credits_button_up"]
[connection signal="pressed" from="screen/Button" to="." method="_on_button_pressed"]
[connection signal="button_up" from="credits/Button" to="." method="_on_button_button_up"]
